# uniffi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml
bindgen-tests/ruby/src/: lib.rs
bindgen-tests/ruby/tests/: callback_interfaces.rb  collections.rb  enums.rb  external_types.rb  trait_interfaces.rb
cargo_uniffi/: Cargo.toml  askama.toml
cargo_uniffi/src/: lib.rs  main.rs
cargo_uniffi/src/commands/: bindgen.rs  check.rs  gradle.rs  mod.rs
cargo_uniffi/src/commands/gradle/templates/: build.gradle
docs/manual/src/: SUMMARY.md  futures.md  interface_definition.md
docs/manual/src/interface/: builtin_types.md
docs/manual/src/internals/: lifting_and_lowering.md
docs/manual/src/ruby/: configuration.md
docs/manual/src/types/: remote_ext_types.md
fixtures/callbacks/tests/bindings/: test_callbacks.rb
fixtures/enum-types/tests/bindings/: test_enum_types.rb
fixtures/error-types/tests/bindings/: test.rb
fixtures/ext-types/lib/: uniffi.toml
fixtures/ext-types/proc-macro-lib/tests/: test_generated_bindings.rs
fixtures/futures/src/: lib.rs
fixtures/futures/tests/bindings/: test_futures.rb
fixtures/proc-macro/src/: lib.rs
fixtures/rename/tests/: test_rename.rb
fixtures/uniffi-fixture-time/tests/: test_generated_bindings.rs
uniffi/src/: testing.rs
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: lib.rs  scaffolding.rs
uniffi_bindgen/src/interface/: attributes.rs  enum_.rs  error.rs  function.rs  mod.rs  namespace.rs  object.rs  record.rs  synner.rs
uniffi_core/src/: oneshot.rs
uniffi_macros/: Cargo.toml
uniffi_macros/src/export/: attributes.rs
(+29 files in other folders)
